--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "lucide": "^0.358.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
