--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.11.4",
     "@radix-ui/react-progress": "^1.0.3",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
