--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@google/generative-ai": "^0.11.4",
     "@radix-ui/react-progress": "^1.0.3",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tanstack/react-query": "^5.45.1",
+    "@tanstack/react-query-devtools": "^5.45.1",
+    "@tanstack/react-query-next-experimental": "^5.45.1",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
